# cardioid

./: .gitignore  CMakeLists.txt  COPYRIGHT  ConstantTension.cc  ConstantTension.cpp  ConstantTension.hpp  ExcitationContraction.cc  ExcitationContraction.hh  Lumens2009.cpp  Lumens2009.hpp  Makefile  Makefile.arch  README.md  README.md.bk  beam-hex-rescaled.mesh  buildnotes.txt  cardfiber.cpp  cardfiber.h  cardgradients.cpp  cardgradients.h  cardgradientsp.cpp  cardgradientsp.h  cardiac_coefficients.cpp  cardiac_coefficients.hpp  cardiac_integrators.cpp  cardiac_integrators.hpp  cardiac_physics.cpp  cardiac_physics.hpp  cardiac_solvers.cpp  cardiac_solvers.hpp  constants.h  default_math.hpp  ecg.cpp  ecgdefs.hpp  ecgobjutil.hpp  fiber.cpp  fiberp.cpp  genfiber.cpp  genfiber.h  io.cpp  (+21 more)
INSTALL/: INSTALL.LC.md  INSTALL.Mac.md  INSTALL.Ubuntu.md
arch/: bgq-spi.txt  gpu-clang-default.txt  lassen.yaml  mpi-default.txt  myopenmpi.txt  osx.txt  osx.yaml  pascal.txt  peloton.txt  ray-openmp.txt  rhel.yaml  sierra.txt  sierra.yaml
base/: doinstall_oomph_peloton
doc/: Cardioid.tex
ecg/: CMakeLists.txt  ecgdefs.hpp  makefile.phil
elec/: .gitignore  ActivationAndRecoverySensor.cc  ActivationTimeSensor.hh  Anatomy.hh  AnatomyCell.hh  AnatomyReader.hh  Barriers.txt  BetterTT06.cc  BetterTT06.fit.data  BetterTT06.hh  BlockLoadBalancer.cc  BoundingBox.cc  BoxStimulus.cc  BoxStimulus.hh  BucketOfBits.cc  BucketOfBits.hh  CMakeLists.txt  CUDADiffusion.cc  CaAverageSensor.cc  CommTable.cc  CommTable.hh  ConstantReaction.cc  DiffusionUtils.hh  Doxyfile  ECGSensor.cu  ECGSensor.hh  FGRDiffusion.cc  FGRDiffusion.hh  FGRDiffusionOMP.cc  FGRDiffusionOMP.hh  FGRDiffusionOverlap.cc  FGRDiffusionOverlap.hh  FGRDiffusionStrip.cc  FGRDiffusionStrip.hh  FGRDiffusionThreads.cc  FGRDiffusionThreads.hh  FGRUtils.cc  FibreConductivity.cc  FibreConductivity.hh  GradientVoronoiCoarsening.cc  (+108 more)
elec/arch/: r92.mk
elec/doc/: Cardioid.tex  Makefile
elec/doc/quick_start_guide/: VisStateVar_SingleSnapshot.txt
elec/unitTests/Array3D/: mkLinks_heart.sh
elec/unitTests/CellModelTests/: Makefile  runMe.sh  tt06Activation.sh
elec/unitTests/IOSpeed/: IOSpeed.cc
elec/unitTests/TT06Driver/: Makefile.osx  TT06Gates.c  TT06GatesSimd.c  coef.data
elec/unitTests/tools/: mkLinks_heart.sh
fibers/: .gitignore  CMakeLists.txt  cardfiber.cpp  cardfiber.h  cardgradients.cpp  cardgradientsp.cpp  cardgradientsp.h  constants.h  fiber.cpp  fiberp.cpp  genfiber.cpp  genfiber.h  io.cpp  mfemTest.cpp  mkLinks_ddcMD.sh  option.h  solver.cpp  utils.h
fibers/INSTALL/: INSTALL.LC.md  INSTALL.Mac.md
fibers/examples/heart/: runfiber.job
hack/: CMakeLists.txt  MatrixElementPiecewiseCoefficient.cpp  MatrixElementPiecewiseCoefficient.hpp  cardiac_coefficients.cpp  cardiac_coefficients.hpp  femheart.cpp  util.cpp  util.hpp
include/: lessThan.h  match.h  object.h  three_algebra.h
kdtree++/: kdtree.hpp
mech/: CMakeLists.txt  ConstantTension.hpp  ExcitationContraction.cpp  Lumens2009.cpp  Lumens2009.hpp  beam-hex.mesh  cardiac_integrators.cpp  cardiac_solvers.cpp  cardiac_solvers.hpp  hollow-ball.vtk  makefile  mechanics_driver.hpp
simUtil/: README.md
simdops/: AlignedAllocator.hh  CMakeLists.txt  x86_avx512f.hpp
src/: .gitignore  00README.TXT  ActivationAndRecoverySensor.cc  ActivationAndRecoverySensor.hh  ActivationTimeSensor.cc  ActivationTimeSensor.hh  AlignedAllocator.hh  Anatomy.hh  AnatomyCell.h  AnatomyCell.hh  AnatomyReader.C  AnatomyReader.cc  AnatomyReader.h  AnatomyReader.hh  Array3d.hh  ArrayView.hh  BetterTT06.cc  BetterTT06.cu  BetterTT06.hh  BlockLoadBalancer.cc  BlockLoadBalancer.hh  BlueBeats.txt  BoundingBox.hh  BoxStimulus.cc  BoxStimulus.hh  BoxStimulusCuda.cu  BucketOfBits.cc  BucketOfBits.hh  CMakeLists.txt  CUDADiffusion.cc  CUDADiffusion.hh  CUDADiffusion_ker.cu  CaAverageSensor.cc  CaAverageSensor.hh  CheckpointVarInfo.hh  CollectionIO.h  CollectionIO.hh  CommTable.C  CommTable.cc  CommTable.hh  (+559 more)
src/TT06Driver/: Makefile  Makefile.bgq  Makefile.osx  TT06Func.h  TT06GatesSimd.c  TT06NonGates.h  TT06NonGatesSimd.c  driver.c  fastLog.h  initCode.c  mkLinks  portableSIMD.h  runDriver
src/TT06Driver/gatesSimdCode/: TT06GatesSimd.cSave  TT06GatesSimdM.c
src/TT06Driver/nonGateSimdCode/: TT06NonGatesSimd.c.good  TT06NonGatesSimd_v4.c  better7.c
src/arch/: bgl.mk  bgp.mk  bgq-spi-compat.mk  bgq-spi.mk  bgq.mk  cygwin.mk  osx.mk  peloton.mk  q32.mk  ray-openmp.mk  spi.mk  spi_grotius.mk  tambo.mk
src/ddcMD_files/src/: GridAssignmentObject.c  codata.h  ddcMalloc.c  ddcMalloc.h  error.c  hardwareInfo.c  hardwareInfo.h  heap.c  heap.h  ioUtils.c  mpiUtils.c  mpiUtils.h  object.c  object.h  pio.c  pio.h  pioFixedRecordHelper.h  pioVariableRecordHelper.h  tagServer.h  three_algebra.c  three_algebra.h  units.c  units.h  utilities.c  utilities.h
src/ddcMDutil/: CMakeLists.txt
src/ddcMDutil/include/: ddcMalloc.h  ddcMath.h  intQueue.h  ioUtils.h  object.h  pioFixedRecordHelper.h  tagServer.h  three_algebra.h  units.h
src/ddcMDutil/src/: CMakeLists.txt  ddcMalloc.c  ioUtils.c  object.c  units.c
src/simdops/: compile.sh  hpm.x86.c  null.hpp  power_qpx.hpp  simdops.hpp  tt06.cc  x86_avx2.hpp  x86_avx512f.hpp
src/unitTests/Array3D/: Makefile  main.cc  mkLinks_heart.sh
src/unitTests/CellModelTests/: Makefile  OneCell.cc  bb_endo.gp  computeActivationTime.py  runMe.sh
src/unitTests/DynRestitutionTest/: DRPTest.cc  Makefile
src/unitTests/IBM_TT04/: Makefile  SingleCell.cc
src/unitTests/IOSpeed/: IOSpeed.cc  Makefile
src/unitTests/SingleCell/: IBM_TT04.cpp  IBM_TT04.h  IBM_TT04_LUT.cpp  IBM_TT04_LUT.h  Makefile  SingleCell.cpp
src/unitTests/TT04/: Makefile  TT04.cc  bb_epi.gp  bb_mid.gp  cellml_endo.gp  cellml_epi.gp  cellml_mid.gp  mr_endo.gp  mr_epi.gp  mr_mid.gp  runMe.sh
src/unitTests/TT04_CellML/: Makefile  SingleCell.cc  runMe
src/unitTests/TT06Driver/: TT06Func.h  TT06NonGates.c  TT06NonGatesSimd.c  fastLog.h  portableSIMD.h
src/unitTests/TT06Driver/nonGateSimdCode/: TT06NonGatesSimd04Oct12_11-18.c  TT06NonGatesSimd06Oct12_07-41.c
src/unitTests/tools/: mkLinks_heart.sh
(+482 files in other folders)
